# advent-of-code-2023

./: .gitignore
c/day_06/: Makefile  main.c
clojure/day-04/: CHANGELOG.md  README.md  project.clj
clojure/day-04/doc/: intro.md
clojure/day-04/src/day_04/: core.clj  part_1.clj  part_2.clj
clojure/day-04/test/day_04/: core_test.clj
go/day01/: go.mod  lib.go  lib_test.go  naive.go
go/day01/cmd/part1/: main.go
go/day01/cmd/part2/: main.go
go/day02/: go.mod  lib.go  lib_test.go
go/day02/cmd/part1/: main.go
go/day02/cmd/part2/: main.go
go/day03/: lib.go  lib_test.go
go/day03/cmd/part1/: main.go
go/day03/cmd/part2/: main.go
mojo/day_04/: lib.mojo  part_1.mojo
ocaml/day_07/: day_07.opam  dune-project
ocaml/day_07/lib/: dune  lib.ml
ocaml/day_07/test/: dune  test_day_07.ml
python/day_04/: lib.py  part_1.py  part_2.py  test.py
rust/day_01/src/: lib.rs
rust/day_05/: Cargo.toml
rust/day_05/src/: lib.rs
rust/day_07/: Cargo.toml
rust/day_07/src/: lib.rs
rust/day_09/src/: lib.rs
rust/day_10/: Cargo.toml
rust/day_10/src/: lib.rs
typescript/day06/: README.md  bun.lockb  index.test.ts  index.ts  package.json  part1.ts  part2.ts
